
plugins {
    id 'application'
}

sourceCompatibility = 21
targetCompatibility = 21

// tag::repositories[]
repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}
// end::repositories[]

// tag::dependencies[]
dependencies {
    testImplementation 'com.github.hmcts:fortify-client:1.4.8:all'
}
// end::dependencies[]

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
